fix: fix overflow for body

--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,6 @@ body {
   margin: 0;
   min-block-size: 100vh;
   block-size: 100dvh;
-  overflow: hidden;
   font-size: var(--font-size-2);
   line-height: 1.5;
   background:
@@ -170,7 +169,8 @@ kbd {
   max-inline-size: 1440px;
   margin-inline: auto;
   padding-inline: clamp(var(--space-4), 2vw + var(--space-4), var(--space-7));
-  overflow: hidden;
+  overflow: auto;
+  overscroll-behavior: contain;
 }
 
 .appHeader {
